[project]
name = "deepagents-interrupt-workshop"
version = "0.1.0"
description = "Deep Agents workshop notebook for the Interrupt conference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.3",
    "python-dotenv>=1.0.0",
    "jupyterlab>=4.5.6",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-openai>=1.2.1",
    "langgraph-cli[inmem]>=0.4.24",
    "tavily>=1.1.0",
]

[project.optional-dependencies]
# Optional providers - install only if you plan to swap models in utils/models.py
azure = ["azure-identity>=1.25.1"]
bedrock = ["langchain-aws>=1.4.5"]
vertex = ["langchain-google-genai>=4.2.2"]

[tool.setuptools]
packages = ["utils"]
